--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<groupId>com.smpdemo</groupId>
 	<artifactId>OChat</artifactId>
 	<name>${project.artifactId}</name>
-	<version>0.8.0</version>
+	<version>0.8.0-SNAPSHOT</version>
 
 	<packaging>war</packaging>
 
