--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,13 @@
 	<groupId>com.smpdemo</groupId>
 	<artifactId>OChat</artifactId>
 	<name>${project.artifactId}</name>
-	<version>0.8.0-SNAPSHOT</version>
+	<version>0.9.0-SNAPSHOT</version>
 
 	<packaging>war</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<version.cxf>2.7.6</version.cxf>
-		<version.slf4j>1.7.1</version.slf4j>
-		<version.olingo>2.0.5-SNAPSHOT</version.olingo>
+		<version.olingo>2.0.5</version.olingo>
 	</properties>
 
 	<build>
@@ -54,8 +52,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -104,11 +102,6 @@
          <dependency>
            <groupId>org.apache.olingo</groupId>
            <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-           <version>${version.olingo}</version>
-         </dependency>
-         <dependency>
-           <groupId>org.apache.olingo</groupId>
-           <artifactId>olingo-odata2-jpa-processor-ref</artifactId>
            <version>${version.olingo}</version>
          </dependency>
          <dependency>
